# oboe-synth

nativescript-plugin/src/: index.d.ts  oboe-plugin.android.d.ts  oboe-plugin.android.ts  oboe-plugin.common.d.ts  oboe-plugin.common.ts
oboe-android/: build.gradle
oboe-android/src/main/: AndroidManifest.xml
oboe-android/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Oscillator.h  native-lib.cpp
oboe-android/src/main/res/values/: strings.xml
oboe-synth-app/demo-angular/App_Resources/Android/src/main/: AndroidManifest.xml
oboe-synth-app/demo-angular/App_Resources/Android/src/main/res/values/: strings.xml
oboe-synth-app/demo-angular/src/: app.css
oboe-synth-app/demo-angular/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
oboe-synth-app/demo-angular/src/app/home/: home-routing.module.ts  home.component.css  home.component.html  home.component.ts  home.module.ts
oboe-synth-app/demo-angular/src/app/home/keyboard/: key.ts  keyboard.component.css  keyboard.component.html  keyboard.component.ts
oboe-synth-app/demo-angular/src/app/layout/: layout-utils.ts  layout.service.ts
oboe-synth-app/demo-angular/src/app/settings/: settings-routing.module.ts  settings.component.css  settings.component.html  settings.component.ts  settings.module.ts
oboe-synth-app/demo-angular/src/app/synth/: oscillator.ts  synth-utils.ts  synth.service.ts
